<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    >

    <ImageView
        android:id="@+id/tv_log"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/tv_log"
        android:background="#00000000"
        />

    <TextView
        android:id="@+id/time"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:textColor="#ECE4E4"
        android:textSize="25sp"
        />

    <ImageButton
        android:id="@+id/icon_eth_unfocused"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/time"
        android:layout_marginRight="11dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_eth_unfocused"
        />

    <ImageButton
        android:id="@+id/icon_folder_unfocused"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/icon_eth_unfocused"
        android:layout_marginRight="11dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_disk_unfocused"
        />

    <ImageButton
        android:id="@+id/icon_search_unfocused"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="11dp"
        android:layout_toLeftOf="@+id/icon_folder_unfocused"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_search_unfocused"
        />

    <TextView
        android:id="@+id/me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_log"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style_1"
        android:clickable="true"
        android:textColor="@drawable/ttextcolor"
        android:textSize="20sp"

        android:text="@string/me"
        />

    <TextView
        android:id="@+id/featured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/me"
        android:layout_marginLeft="55dp"
        android:layout_below="@id/tv_log"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style_1"
        android:clickable="true"
        android:textColor="@drawable/ttextcolor"
        android:textSize="20sp"
        android:text="@string/featured"
        />

    <TextView
        android:id="@+id/AuroraTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/featured"
        android:layout_marginLeft="55dp"
        android:layout_below="@id/tv_log"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style_1"
        android:clickable="true"
        android:textColor="@drawable/ttextcolor"
        android:textSize="20sp"
        android:text="@string/aurora_tv"
        />

    <TextView
        android:id="@+id/cool_cat_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/AuroraTV"
        android:layout_marginLeft="55dp"
        android:layout_below="@id/tv_log"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style_1"
        android:clickable="true"
        android:textColor="@drawable/ttextcolor"
        android:textSize="20sp"
        android:text="@string/cool_cat_tv"
        />

    <TextView
        android:id="@+id/movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/cool_cat_tv"
        android:layout_marginLeft="55dp"
        android:layout_below="@id/tv_log"
        android:background="@drawable/button_style_1"
        android:clickable="true"
        android:textColor="@drawable/ttextcolor"
        android:textSize="20sp"
        android:text="@string/movie"
        />

    <TextView
        android:id="@+id/children"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/movie"
        android:layout_marginLeft="55dp"
        android:layout_below="@id/tv_log"
        android:background="@drawable/button_style_1"
        android:clickable="true"
        android:textColor="@drawable/ttextcolor"
        android:textSize="20sp"
        android:text="@string/children"
        />

    <TextView
        android:id="@+id/education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/children"
        android:layout_marginLeft="55dp"
        android:layout_below="@id/tv_log"
        android:background="@drawable/button_style_1"
        android:clickable="true"
        android:textColor="@drawable/ttextcolor"
        android:textSize="20sp"
        android:text="@string/education"
        />

    <TextView
        android:id="@+id/application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_log"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/education"
        android:background="@drawable/button_style_1"
        android:clickable="true"
        android:text="@string/application"
        android:textColor="@drawable/ttextcolor"
        android:textSize="20sp"
        />

    <include
        android:id="@+id/first_layout"
        layout="@layout/first_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/me"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        />

    <include
        android:id="@+id/second_layout"
        layout="@layout/second_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_layout"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        />



</RelativeLayout>